[tool.poetry]
name = "black-mamba"
version = "0.5.3"
description = "Development framework to write, test and deploy smart contracts written in Vyper. It has integrated web3.py support."
authors = ["Arjuna Sky Kok <arjuna@mamba.black>"]
license = "LGPL-3.0"
readme = "README.md"
repository = "https://github.com/arjunaskykok/mamba"
homepage = "https://mamba.black"
keywords = ["blockchain"]
classifiers = [
  "Topic :: Software Development :: Build Tools",
  "Topic :: Software Development :: Libraries :: Python Modules"
]

[tool.poetry.dependencies]
python = "^3.6"
vyper = "0.2.7"
pytest = "6.0.2"
web3 = "5.12.2"
eth-tester = "0.5.0b2"
py-evm = "0.3.0a19"
pytest-mock = "3.3.1"

[tool.poetry.scripts]
mamba = "black_mamba.mamba_cli:parse_cli_args"
